* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 8.3.0
- Add RockyLinux 8 support

* Tue Jun 15 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 8.2.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Thu Dec 17 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 8.1.2
- Maintenance update for module assets

* Wed Sep 16 2020 Liz Nemsick <lnemsick.simp@gmail.com> - 8.1.1-0
- Advertise OEL support in the metadata.json.

* Tue Mar 31 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.1.0-0
  - Fix missing `group_filter` option in LDAP
  - Add support for overriding post-auth in LDAP
  - Add support for overriding accounting in LDAP
  - Add support for specifying the entire file content
  - Fix OEL tests
  - Add support for simplib < 5

* Mon Aug 19 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 8.1.0-0
- Remove `simp_options::puppet::server` from the default lookup logic
  for `freeradius::v3::modules::ldap::server`. In systems that use Bolt
  to compile and apply manifests, that setting will not be available.
- Add types documentation

* Tue Jul 02 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.0.1-0
- Updated documentation
  - Cleaned up for `puppet strings`
  - Added REFERENCE.md
  - Updated README.md
- Switched all FIPS checks to use top level inherited checks
- Add Puppet 6 support

* Tue Mar 12 2019 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 8.0.0-0
- Refactored API
- Strong typed all variables and updated functions for puppet 5 compatability.
- Removed support for freeradius version 2 and CentOS 6.
- Inner-tunnel site is not added by default any more.
- Added check for FIPS mode and fail if server is in FIPS mode.
- Created ldap site and module to be used to integrate freeradius
  with ldap server.  Instructions for use are in the README.
- SQL sites are not added by default.
- Update the upper bound of stdlib to < 6.0.0
- Added acceptance and spec tests
